[package]
name = "pftables-rs"
version = "0.1.1"
authors = ["d3npa <d3npa@pm.me>"]
edition = "2018"
description = "Small library for managing tables in OpenBSD pf (packet filter)"
license = "BSD-2-Clause"
repository = "https://github.com/d3npa/pftables-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
